--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
   "author": "Erivaldo Dantas <erivaldo.dantas85@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.13"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "watch": "nodemon index.js"
   }
 }
